fix: adjust password input alignment and behavior

--- a/css/style.css
+++ b/css/style.css
@@ -250,3 +250,15 @@ main {
 .submit button:hover {
     background-color: #9b51e0;
 }
+
+.password .text input .font-sm {
+    font-size: 2rem;
+}
+
+.password .text input .font-xs {
+    font-size: 1.5rem;
+}
+
+.password .text input .font-xxs {
+    font-size: 1rem;
+}
